# Ictw

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  v1发版施工plan.md
App/LinoI/: ChapterDraftCache.swift  ChapterEditorViews.swift  CharactersViews.swift  Info.plist  LinoAPI.swift  LinoComponents.swift  LinoErrorPresenter.swift  LinoIApp.swift  LinoModels.swift  LinoStores.swift  LinoTheme.swift  NoticeBus.swift  (+4 more)
App/LinoI.xcodeproj/: project.pbxproj
Backend/: .env.example  alembic.ini  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 20260709_0001_initial.py  20260710_0002_v1_agent_chain.py  20260710_0003_v1_1_jobs_audit_exemptions.py  20260711_0004_binding_temperature.py  20260711_0005_character_field_patches.py  20260711_0006_error_context.py
Backend/app/: auth.py  config.py  db.py  main.py
Backend/app/agents/: compressor.py  extractor.py  memory_selector.py  reviser.py  writer.py
Backend/app/llm/: base.py  factory.py  openai_compatible.py
Backend/app/models/: __init__.py  entities.py
Backend/app/routers/: books.py  chapters.py  characters.py  settings.py
Backend/app/schemas/: book.py  chapter.py  character.py  common.py  settings.py
Backend/app/services/: audit.py  context.py  crypto.py  extraction.py  model_capabilities.py  personas.py  write_jobs.py
Backend/tests/: conftest.py  test_api.py  test_prompt.py  test_v1_1_features.py  test_v1_2_field_revert.py  test_v1_pipeline.py  test_v1_schema_and_settings.py
archive/: v1.1.0施工plan.md  v1.2.0施工plan.md  v1.2.3施工plan.md  v1.3.0施工plan.md  v1.3.1施工plan.md  v1.4.0施工plan.md
(+21 files in other folders)
